@@ -27,6 +27,9 @@ EOF
 cat > Makefile.am << 'END'
 bin_PROGRAMS = foo.la
 foo_la_SOURCES = foo.c
+.PHONY: test
+test: all
+	test -f foo.la$(EXEEXT)
 END
 
 echo 'int main () { return 0; }' > foo.c
@@ -35,6 +38,6 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE
 ./configure
-$MAKE
+$MAKE test
 
 :
