@@ -1,5 +1,11 @@
 2011-07-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: small enhancement to 'primary3.test'
+	* tests/primary3.test: Also test that the program named `foo.la'
+	has been effectively created.
+
+2011-07-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: a small simplification in 'pr8365-remake-timing.test'
 	* tests/pr8365-remake-timing.test: Avoid redundant definition
 	and use of `$save_AUTOCONF' variable.
